--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate for stripe as faas using gcloud functions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test --recursive --timeout 15000"
   },
   "repository": {
     "type": "git",
