--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: node_js
 node_js:
   - "8"
+  - "10"
 cache:  
   directories:
     - "node_modules"
-sudo: false
 install:
   - npm install
 script:
-  - npm test
+  - npm run test
+after_success: npm run coverage
