--- a/package.json
+++ b/package.json
@@ -21,24 +21,23 @@
   "homepage": "https://github.com/eldimious/gcf-stripe#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
+    "dotenv": "^16.0.0",
     "stripe": "^6.25.1",
     "throw-http-errors": "^2.0.0",
-    "validator": "^10.11.0"
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
+    "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "coveralls": "^2.13.3",
-    "eslint": "^5.14.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
+    "coveralls": "^3.0.2",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "istanbul": "^0.4.5",
-    "mocha": "^6.0.1",
-    "nyc": "^13.3.0",
-    "sinon": "^7.2.4",
-    "supertest": "^3.4.2"
+    "mocha": "^9.1.3",
+    "nodemon": "^2.0.15",
+    "nyc": "^15.1.0",
+    "sinon": "^4.0.0",
+    "supertest": "^3.0.0"
   }
 }
